--- a/WebApplication1/Views/Home/Team.cshtml
+++ b/WebApplication1/Views/Home/Team.cshtml
@@ -9,8 +9,18 @@
         <a class="btn btn-default" asp-action="Index">Back to List</a>
     </div>
 
-    <h2>@Model.Name</h2>
-    <h4>@Model.Mail</h4>
+    <div style="display: inline-block;">
+        <div style="float: right; margin: 1em 2em;">
+            @if (Model?.Avatar != null)
+            {
+                <img style='width:180px; height:160px;' src="data:image/jpeg;base64,@(Convert.ToBase64String(Model?.Avatar))" />
+            }
+        </div>
+        <div style="float: left;">
+            <h2>@Model.Name</h2>
+            <h4>@Model.Mail</h4>
+        </div>
+    </div>
     <br />
 
     <div>
@@ -38,6 +48,12 @@
                 </tr>
                 i++;
             }
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
         </table>
 
         <h4>Players:</h4>
@@ -61,6 +77,12 @@
                 </tr>
                 i++;
             }
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
         </table>
 
         <h4>Rewards:</h4>
@@ -82,6 +104,11 @@
                 </tr>
                 i++;
             }
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
         </table>
         <br />
     </div>
